# DSN2CSV

./: .gitignore  CMakeLists.txt  CMakePresets.json  DSNTree.xml  DSN_P24V01.xml  LICENSE.txt  README-fr.md  README-fr.txt  README.md  README.txt  dsn-datatypes-CT2024.xlsx  dsn-datatypes.cfg  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  configuration.cpp  dsn2csv-main.cpp  dsn2csv.cpp
src/include/: configuration.hpp  dsn2csv.hpp
